--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
-    "sass": "^1.54.8",
+    "sass": "^1.57.1",
+    "node-sass": "npm:sass@^1.49.9",
     "stripe": "^11.5.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
