--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.9.4",
+    "node-sass": "npm:sass@^1.49.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -27,7 +29,6 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.7",
     "sass": "^1.57.1",
-    "node-sass": "npm:sass@^1.49.9",
     "stripe": "^11.5.0",
     "styled-components": "^5.3.6",
     "typed-redux-saga": "^1.5.0",
